:package: gif e link para repositorio

--- a/index.html
+++ b/index.html
@@ -37,18 +37,64 @@
                 <button id="apaga-tudo" class="button is-danger">Apagar Tudo</button>
             </section>      
         </section>
+
+        <div class="containerRepo">
+            <a class="button is-warning" href="https://github.com/wend3ll-souza/myTaskList.io" target="_blank">Repositorio</a>
+        </div>
+
+        <footer id="contacts">
+            <section>
+                <div>
+                    <article id="moreAbout">
+                            <img src="./img/perfilImg.png" alt="foto de perfil">
+                            <p class="footerP">Está página foi desenvolvida para compartilhar e colocar em
+                                prática meus estudos como <b>Desenvolverdor Full Stack</b>. Está em constante evolução,
+                                assim como meus conhecimentos. Visite meu <a target="_blank"
+                                    href="https://www.linkedin.com/in/wendell-souza-5b13781a3/">LinkedIn</a> e não deixe de
+                                entrar em contato.</p>
+                                
+                                                        <div>
+                                                            <h5>Entre em contato:</h5>
+                                                            <ul id="allLinks">
+                                                                <li>
+                                                                    <a target="_blank"
+                                                                        href="https://www.linkedin.com/in/bm-wendell-souza-5b13781a3/">
+                                                                        <i class="fab fa-linkedin list-icon"> LinkedIn</i>
+                                                                    </a>
+                                                                </li>
+                                                                <li>
+                                                                    <a target="_blank" href="https://github.com/wend3ll-souza">
+                                                                        <i class="fab fa-github-alt list-icon"> GitHub</i>
+                                                                    </a>
+                                                                </li>
+                                                                <li>
+                                                                    <a target="_blank" href="https://twitter.com/Wend3llSouza">
+                                                                        <i class="fab fa-twitter list-icon"> Twitter</i>
+                                                                    </a>
+                                                                </li>
+                                                                <li>
+                                                                    <a target="_blank" href="https://www.behance.net/wend3llsouza">
+                                                                        <i class="fab fa-behance-square list-icon"> Behance</i>
+                                                                    </a>
+                                                                </li>
+                                                                <li>
+                                                                    <a target="_blank" href="mailto:wend3llsouza@gmail.com">
+                                                                        <i class="fab fa-behance-square list-icon"> Email</i>
+                                                                    </a>
+                                                                </li>
+                                                                <li>
+                                                                    <a target="_blank"
+                                                                        href="https://api.whatsapp.com/send?phone=5519987650743">
+                                                                        <i class="fab fa-whatsapp list-icon"> WhatsApp</i>
+                                                                    </a>
+                                                                </li>
+                                                            </ul>
+                                                    </div>
+                    </article>
+                </div>
+            </section>
+        </footer>
     </main>
-    <nav>
-        <a href="https://github.com/wend3ll-souza" target="_blank">
-            <i class="fab fa-github-alt"></i>
-        </a>
-        <a href="https://www.behance.net/wend3llsouza" target="_blank">
-            <i class="fab fa-behance-square"></i>
-        </a>
-        <a href="https://www.linkedin.com/in/wendell-souza-5b13781a3/" target="_blank">
-            <i class="fab fa-linkedin"></i>
-        </a>
-    </nav>
 </body>
 <script src="./script.js"></script>
 </html>
